--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,34 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
+body {
+  padding: 0;
+  margin: 0;
+  font-family: Roboto, sans-serif;
+  /*background: #eee;*/
+}
+
+
+main {
+  /*max-width: 1200px;*/
+  margin: 20px auto;
+}
+
+.spacer {
+	flex: 1 1 auto;
+}
+mat-tab-header {
+  margin: 5px 0;
+}
+.mat-card{
+  margin: 20px;
+}
+.sidebar {
+	box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
+	background: #fff;
+	padding: 5px 20px;
+    margin-top: 25px;
+}
+.mat-slider-horizontal, .sidebar .mat-form-field-infix {
+	width: 80% !important;
+}
