--- a/src/app/shopping-cart/shopping-cart.component.css
+++ b/src/app/shopping-cart/shopping-cart.component.css
@@ -3,7 +3,7 @@
 	position: fixed; 
 	right: 10px;
 	z-index: 10;
-	/*display: none;*/
+	display: none;
 
 }
 button {
@@ -14,4 +14,18 @@ button {
 }
 .title {
 	font-weight: bold;
+}
+p {
+	margin:0;
+}
+.subtotal {
+	margin-top: 15px;
+}
+.mat-card-title {
+	margin-bottom: 10px;
+	font-size: 14px;
+}
+hr {
+    margin-top: 2px;
+    margin-bottom: 10px;
 }
