--- a/src/app/shopping-cart/shopping-cart.component.html
+++ b/src/app/shopping-cart/shopping-cart.component.html
@@ -3,30 +3,35 @@
     <mat-card-header>
       <mat-card-title><h4>Tu orden en el Baraton es</h4></mat-card-title>
     </mat-card-header>
+    <hr>
 
     <mat-card-content>
     <div class="row">
       
     </div>
     <div class="row">
-      <div class="col-xs-2"> 1 </div>
-        <div class="col-xs-10">
+      <div class="col-xs-2"> <mat-card-title>1</mat-card-title> </div>
+        <div class="col-xs-7">
           <mat-card-title>Producto</mat-card-title>
+        </div>
+        <div class="col-xs-3">
           <mat-card-subtitle>$27.300</mat-card-subtitle>
         </div>
       </div>
+      <hr>
       <div class="row">
-        <div class="col-xs-12">
-              <p><span class="title">Subtotal:</span> <span class="amount">$&nbsp;27.300</span></p>
+        <div class="col-xs-12 subtotal">
+              <p><small class="title">Subtotal:</small> <small class="amount">$&nbsp;27.300</small></p>
               <p>
-                 <span class="title">Domicilio:</span>
-                 <span class="amount">
+                 <small class="title">Domicilio:</small>
+                 <small class="amount">
                     $0
-                 </span>
+                 </small>
               </p>
         </div>
       </div>
        <div class="row">
+        <hr>
          <div class="col-xs-12 right">
            <div class="resume-checkout">
              <div class="total-checkout">
@@ -35,6 +40,7 @@
              </div>
           </div>
          </div>
+         <hr>
        </div>
     
     </mat-card-content>
