--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,19 +1,19 @@
 <h4>Categorias</h4>
 <mat-accordion multi="true">
-  <mat-expansion-panel *ngFor="let cat of data.categories">
+  <mat-expansion-panel *ngFor="let cat of data.categories" [expanded]="true">
     <mat-expansion-panel-header>
       <mat-panel-title>
         <h4>{{cat.name}} </h4>
       </mat-panel-title>
     </mat-expansion-panel-header>
       <ul *ngFor="let sublevel of cat.sublevels">
-         <li><mat-checkbox>{{sublevel.name}}</mat-checkbox></li>
+         <li><button mat-button (click)="verifychecked(sublevel.id)">{{sublevel.name}}</button></li>
          <li>
            <ul *ngFor="let secondlevel of sublevel.sublevels">
-              <li><mat-checkbox>{{secondlevel.name}}</mat-checkbox></li>
+              <li><button mat-button (click)="verifychecked(secondlevel.id)">{{secondlevel.name}}</button></li>
               <li>
                 <ul *ngFor="let thirdlevel of secondlevel.sublevels">
-                <li><mat-checkbox>{{thirdlevel.name}}</mat-checkbox></li>
+                <li><button mat-button (click)="verifychecked(thirdlevel.id)">{{thirdlevel.name}}</button></li>
               </ul>
               </li>
             </ul>
@@ -25,7 +25,7 @@
 </mat-accordion>
 <div class="margin"></div>
 
-<h4>Precios</h4>
+<!-- <h4>Precios</h4>
 	<mat-slider
         [max]="max"
         [min]="min">
@@ -37,6 +37,6 @@
   <mat-form-field class="margin">
     <input matInput type="number" placeholder="Max" [(ngModel)]="max">
   </mat-form-field>
-<div class="margin"></div>
+<div class="margin"></div> -->
 
  
