--- a/src/app/shopping-cart/shopping-cart.component.html
+++ b/src/app/shopping-cart/shopping-cart.component.html
@@ -1,4 +1,4 @@
-<div class="basket container" >
+<div class="basket container" *ngIf="show">
   <mat-card >
     <mat-card-header>
       <mat-card-title><h4>Tu orden en el Baraton es</h4></mat-card-title>
