--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,4 +1,4 @@
-<div class=" col-sm-6 col-md-4  container-card" *ngFor="let product of data.products | filter : searchText | sortby : field "  >
+<div class=" col-sm-6 col-md-4  container-card" *ngFor="let product of data.products | filter : searchText: idCategory | sortby : field "  >
 	<mat-grid-list cols="1" rowHeight="1:1.28"  >
 	  <mat-grid-tile>
 	    <mat-card class="card">
