--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -9,7 +9,7 @@
 	      </mat-card-content>
 	      <mat-card-actions>
 	        <button mat-raised-button >{{product.price}}</button>
-	        <button mat-raised-button color="primary" *ngIf="product.available == true" (click)="selectedProduct(product.id)">Agregar</button>
+	        <button mat-raised-button color="primary" *ngIf="product.available == true" (click)="addToCart(product)">Agregar</button>
 	        <button mat-raised-button color="warn" *ngIf="product.available == false" disabled="">No disponible</button>
 	      </mat-card-actions>
 	    </mat-card>
