--- a/src/app/shopping-cart/shopping-cart.component.html
+++ b/src/app/shopping-cart/shopping-cart.component.html
@@ -1,4 +1,4 @@
-<div class="basket container" >
+<div class="basket container">
   <mat-card >
     <mat-card-header>
       <mat-card-title><h4>Tu orden en el Baraton es</h4></mat-card-title>
@@ -21,7 +21,7 @@
       <hr>
       <div class="row">
         <div class="col-xs-12 subtotal">
-              <p><small class="title">Subtotal:</small> <small class="amount">$&nbsp;27.300</small></p>
+              <p><small class="title">Subtotal:</small> <small class="amount">$27.300</small></p>
         </div>
       </div>
        <div class="row">
@@ -30,7 +30,7 @@
            <div class="resume-checkout">
              <div class="total-checkout">
                 <p class="title">Total a pagar</p>
-                <p class="price">$27.300</p>
+                <p class="price">27.366</p>
              </div>
           </div>
          </div>
