--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-menu></app-menu>
-<shopping-cart></shopping-cart>
+<shopping-cart (show)="ShowCart()"></shopping-cart>
 <main class="container-fluid">
   <div class="col-md-3 sidebar">
     <sidebar></sidebar>
