--- a/src/app/shopping-cart/shopping-cart.component.css
+++ b/src/app/shopping-cart/shopping-cart.component.css
@@ -1,9 +1,9 @@
 .basket {
-	width: 30%;
+	width: 250px;
 	position: fixed; 
-	right: 10px;
+	right: 20px;
+
 	z-index: 10;
-	/*display: none;*/
 
 }
 button {
