--- a/src/app/shopping-cart/shopping-cart.component.css
+++ b/src/app/shopping-cart/shopping-cart.component.css
@@ -1,10 +1,12 @@
 .basket {
-	width: 250px;
+	width: 320px;
 	position: fixed; 
-	right: 20px;
-
+	right: 65px;
 	z-index: 10;
 
+}
+.mat-card:not([class*=mat-elevation-z]) {
+	width: 320px;
 }
 button {
 	width: 100%;
@@ -32,4 +34,15 @@ hr {
 .mat-card-actions, .mat-card-content, .mat-card-subtitle, .mat-card-title {
     display: block;
     margin-bottom: 5px;
+}
+
+@media(max-width: 600px) {
+	.basket {
+		width: 320px;
+		position: fixed; 
+		right: auto !important;
+		left: auto !important;
+		z-index: 10;
+
+	}
 }
