--- a/src/app/shopping-cart/shopping-cart.component.html
+++ b/src/app/shopping-cart/shopping-cart.component.html
@@ -21,7 +21,7 @@
       <hr>
       <div class="row">
         <div class="col-xs-12 subtotal">
-              <p><small class="title">Subtotal:</small> <small class="amount">$27.300</small></p>
+              <p><small class="title">Subtotal:</small> <small class="amount">${{getTotal() | number}}</small></p>
         </div>
       </div>
        <div class="row">
@@ -30,7 +30,7 @@
            <div class="resume-checkout">
              <div class="total-checkout">
                 <p class="title">Total a pagar</p>
-                <p class="price">27.366</p>
+                <p class="price">${{getTotal() | number}}</p>
              </div>
           </div>
          </div>
