--- a/src/app/shopping-cart/shopping-cart.component.css
+++ b/src/app/shopping-cart/shopping-cart.component.css
@@ -38,11 +38,22 @@ hr {
 
 @media(max-width: 600px) {
 	.basket {
-		width: 320px;
-		position: fixed; 
-		right: auto !important;
-		left: auto !important;
-		z-index: 10;
-
+	    width: 100%;
+	    position: fixed;
+	    right: 0;
+	    left: 0;
+	    bottom: 0;
+	    padding: 0;
+	    z-index: 10;
+	}
+	.mat-card:not([class*=mat-elevation-z]) {
+		    width: 100%;
+		    position: fixed;
+		    right: 0;
+		    left: 0;
+		    bottom: 0;
+		    padding: 30px;
+		    margin: 0;
+		    z-index: 10;
 	}
 }
